--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
         </section>
 
         <section>
+            <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/238003/peer-lending.jpg" style="width: 773px; height: 669.4928774928775px; max-height: none; max-width: none;">
+        </section>
+
+        <section>
+          <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237974/keynote.002.png" style="width: 911px; height: 684px; max-height: none; max-width: none; position: absolute; z-index: 4; left: 10px; top: -6px;" class="absolute-element">
+        </section>
+
+        <section>
+          <h1 class="absolute-element" style="position: absolute; width: 545px; height: 122px; z-index: 4; left: 218px; top: 308px; max-height: none; max-width: none;">$249 Million</h1>
+          <h2 class="absolute-element" style="position: absolute; width: 467px; height: 68px; z-index: 4; left: 257px; top: 531px;">
+            <span>In the last 30 days</span>
+          </h2>
+          <div class="absolute-element" style="position: absolute; width: 968px; height: 217px; z-index: 4; left: -5px; top: 16px;">
+            <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237991/lending_club_logo.png">
+          </div>
+        </section>
+
+        <section>
+          <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237971/LendingClub_loans.png" style="width: 593.5072933549433px; height: 661px; max-height: none; max-width: none;">
+        </section>
+
+        <section>
+            <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237972/Loan_mop_up.png" style="width: 923px; height: 315px; max-height: none; max-width: none; position: absolute; z-index: 4; left: -5px; top: 164px;" class="absolute-element">
+        </section>
+
+        <section>
           <div class="absolute-element" style="position: absolute; z-index: 4; left: 66px; top: -50px;">
             <div class="left-column">
               <h2>Proportional Hazard Model</h2>
@@ -46,27 +72,27 @@
             </div>
 
             <div class="right-column">
-              <div class="row">
+              <div class="row fragment">
                 <span>Hazard \(\mu\left(t\right)\)</span>
                 <svg class="chart" id="hazard"></svg>
               </div>
 
-              <div class="row">
+              <div class="row fragment">
                 <span>Default probability \(f\left(t\right)\)</span>
                 <svg class="chart" id="marginal-default"></svg>
               </div>
 
-              <div class="row">
+              <div class="row fragment">
                 <span>Net Present Payment Value</span>
                 <svg class="chart" id="net-present-payment-value"></svg>
               </div>
 
-              <div class="row">
+              <div class="row fragment">
                 <span>Net Present Cumulative Value</span>
                 <svg class="chart" id="net-present-cumulative-value"></svg>
               </div>
 
-              <div class="row">
+              <div class="row fragment">
                 <span>Return Distribution</span>
                 <svg class="chart" id="return-distribution"></svg>
               </div>
@@ -85,14 +111,9 @@
         </section>
 
         <section>
-          <ul>
-            <li class="fragment">Hey</li>
-            <li class="fragment">Hey</li>
-            <li class="fragment">Hey</li>
-          </ul>
+          <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237979/stack.png" class="absolute-element" style="position: absolute; max-height: none; max-width: none; width: 923.0610956634571px; height: 687.6486194383172px; z-index: 4; left: 2px; top: -6px;">
         </section>
 			</div>
-
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
