--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section>
-            <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/238003/peer-lending.jpg" style="width: 773px; height: 669.4928774928775px; max-height: none; max-width: none;">
+          <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/238003/peer-lending.jpg" style="width: 773px; height: 669.4928774928775px; max-height: none; max-width: none;">
         </section>
 
         <section>
@@ -45,7 +45,7 @@
         <section>
           <h1 class="absolute-element" style="position: absolute; width: 545px; height: 122px; z-index: 4; left: 218px; top: 308px; max-height: none; max-width: none;">$249 Million</h1>
           <h2 class="absolute-element" style="position: absolute; width: 467px; height: 68px; z-index: 4; left: 257px; top: 531px;">
-            <span>In the last 30 days</span>
+          <span>In the last 30 days</span>
           </h2>
           <div class="absolute-element" style="position: absolute; width: 968px; height: 217px; z-index: 4; left: -5px; top: 16px;">
             <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237991/lending_club_logo.png">
@@ -53,7 +53,7 @@
         </section>
 
         <section>
-          <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237971/LendingClub_loans.png" style="width: 593.5072933549433px; height: 661px; max-height: none; max-width: none;">
+          <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237971/LendingClub_loans.png" style="width: 700px; position: relative; top: -100px; max-height: 2000px">
         </section>
 
         <section>
@@ -112,6 +112,10 @@
 
         <section>
           <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237979/stack.png" class="absolute-element" style="position: absolute; max-height: none; max-width: none; width: 923.0610956634571px; height: 687.6486194383172px; z-index: 4; left: 2px; top: -6px;">
+        </section>
+
+        <section>
+          <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/238469/about_me.png" style="width: 878px; height: 656.6816568047337px; max-height: none; max-width: none;">
         </section>
 			</div>
 		</div>
