Reincluded slide on investment spikes

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237971/LendingClub_loans.png" style="width: 700px; position: relative; top: -100px; max-height: 2000px">
         </section>
 
-        <!-- <section> -->
-        <!--     <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237972/Loan_mop_up.png" style="width: 923px; height: 315px; max-height: none; max-width: none; position: absolute; z-index: 4; left: -5px; top: 164px;" class="absolute-element"> -->
-        <!-- </section> -->
+        <section>
+            <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/mattgibb/images/237972/Loan_mop_up.png" style="width: 923px; height: 315px; max-height: none; max-width: none; position: absolute; z-index: 4; left: -5px; top: 164px;" class="absolute-element">
+        </section>
 
         <section>
           <div class="absolute-element" style="position: absolute; z-index: 4; left: 66px; top: -50px;">
