Got rid of Matt Gibb header in about me

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <section id="about-me" data-background="#ffffff">
           <div id="about-me-container">
-            <h2 style="position: absolute;">Matt Gibb</h2>
+            <!-- <h2 style="position: absolute;">Matt Gibb</h2> -->
             <img src="/images/oxford_logo.jpeg" id="oxford-logo" />
             <div class="fragment" id="hobbies"></div>
             <div id="research">
